align date to right | fix responsivness

--- a/packages/opensrp-plans/src/index.css
+++ b/packages/opensrp-plans/src/index.css
@@ -27,11 +27,7 @@
 }
 
 .plan-info-main {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   padding: 16px 28px;
-  flex-wrap: wrap;
 }
 .plan-avatar-detail-section {
   display: flex;
