--- a/packages/react-utils/src/components/CommonStyles/index.css
+++ b/packages/react-utils/src/components/CommonStyles/index.css
@@ -8,3 +8,7 @@
 .d-flex {
   display: flex;
 }
+.flex-right {
+  display: flex;
+  justify-content: flex-end;
+}
